# Embedded-Systems-Course

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
assignment2_stuff/: README  exercise4_and_5_finalcode.c  exercise7.c  vivado_hls_exercise7.c
assignment3/: EmbeddedSystemX.h  StatesAsSingletons.h  emb_rtsys_assign3_test_code--state_pattern_demo_1.cpp
assignmentcode/: exercises_answers.md
ex1lec4slides/: mac.cpp  mac.h  monitor.h  stimulus.cpp  stimulus.h  top.h
html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  _states_as_singletons_8h.html  _states_as_singletons_8h.js  _states_as_singletons_8h__dep__incl.map  _states_as_singletons_8h__dep__incl.md5  _states_as_singletons_8h__incl.map  _states_as_singletons_8h__incl.md5  _states_as_singletons_8h_source.html  annotated.html  annotated_dup.js  class_configuration_state-members.html  class_configuration_state.html  class_configuration_state.js  class_configuration_state__coll__graph.map  class_configuration_state__coll__graph.md5  class_configuration_state__inherit__graph.map  class_configuration_state__inherit__graph.md5  class_configuration_state_a3823e276d58c7ae43411fda154df3eda_cgraph.map  class_configuration_state_a3823e276d58c7ae43411fda154df3eda_cgraph.md5  class_configuration_state_ab667ff4fd7114cce9a39042235b7ed90_cgraph.map  class_configuration_state_ab667ff4fd7114cce9a39042235b7ed90_cgraph.md5  class_configuration_state_ad64970b29021309679964cf9c3bce36a_cgraph.map  class_configuration_state_ad64970b29021309679964cf9c3bce36a_cgraph.md5  (+356 more)
(+1547 files in other folders)
